# dminion

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .prettierrc  ACKNOWLEDGEMENTS.txt  README.md  package.json  pnpm-lock.yaml  vite.config.js
.github/: copilot-instructions.md
art/: icons.afdesign  ui-elements.afdesign
docs/: process.md  project-brief.md
memory-bank/: active-context.md  product-context.md  progress.md  project-brief.md  system-patterns.md  tech-context.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260130000000_initial_schema.sql
src-tauri/src/: campaign_commands.rs  config.rs  db.rs  dice.rs  dice_commands.rs  game.rs  game_commands.rs  lib.rs  main.rs  preferences.rs  services.rs  state.rs
src-tauri/src/config/: app_settings.rs  campaign_settings.rs  error.rs  paths.rs
src-tauri/src/db/: connection.rs  error.rs  monsters.rs  parties.rs  players.rs
src-tauri/src/db/data/: srd-5.1.sql
src-tauri/src/dice/: ast.rs  eval.rs  lexer.rs  lookahead.rs  mod.rs  parser.rs  pp.rs
src-tauri/src/game/: common.rs  conditions.rs  damage.rs  duration.rs  expiry.rs  game.rs  lair.rs  mod.rs  monster.rs  participant.rs  player.rs  schema.sql  time.rs
src-tauri/src/services/: portrait.rs  savepoint.rs
src-tauri/src/styles/: app.scss  button.scss  card.scss  checkbox.scss  game.scss  globals.scss  textinput.scss  toolbar.scss
src-tauri/src/themes/: dawn.ts  dusk.ts  icons.ts  night.ts  noon.ts  theme.ts
src/lib/: Time.ts  (+3 more)
(+95 files in other folders)
