[package]
name = "dminion"
version = "0.1.0"
description = "Dungeon Minion - A DM assistant tool"
authors = ["Jonathon B. Cobb"]
license = "MIT"
edition = "2021"

[lib]
name = "dminion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
chrono = { version = "0.4.38", features = ["serde"] }
tauri-plugin-os = "2.0.1"
tauri-plugin-dialog = "2.0.4"
thiserror = "2.0.12"
sqlx = { version = "0.8.6", features = ["macros", "runtime-tokio", "sqlite"] }
toml = "0.9.10"
